--- a/index.css
+++ b/index.css
@@ -1,3 +1,34 @@
 body{
-    background-color:gray;
+    background-color:#eff1f3;
+}
+header{
+    width: 100%;
+    height: 5rem;
+    background-color:#223843;
+    display: block;
+    color:white
+}
+h1 {
+    margin:auto;
+    padding: 1rem;
+}
+#txt-Box{
+    width: 70%;
+    height: 7rem;
+    display: block;
+    margin: auto;
+    padding: 1rem;
+    margin-top: 2rem;
+    
+}
+button{
+    width: 10rem;
+    height: 3rem;
+    background-color: #87b38d;
+    border: 1%;
+    border-color: black;
+    border-radius: 7%;
+    margin:auto;
+    display: block;
+    margin-top: 1rem;
 }
